# htmltemplate

./: .gitignore  LICENSE  README.md  configure.ac
examples/: basis.json
examples/basis/: footer.txt  header1.txt  header2.txt  index.body  layout.css  pilot.body  pointers.body  template.body
src/: HtmlContext.cpp  HtmlContext.hpp  Makefile.am  htmlTemplater.cpp
