AC_PREREQ
AC_INIT([html-templater], [0.1], [schnet@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SRCDIR([src/htmlTemplater.cpp])

LT_INIT

AC_PROG_CC
AC_PROG_CXX
AC_LANG(C++)

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS(iostream)

AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_OUTPUT
